added summary to 03_exploratory_data_analysis

--- a/Notebooks/03_exploratory_data_analysis.ipynb
+++ b/Notebooks/03_exploratory_data_analysis.ipynb
@@ -3974,7 +3974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** "
+    "**A: During this process I explored data within the skidata and state summary data frames I previously created. I looked into variables such as state population, resorts per state, and total skiable area to see what questions or insights they might garner. It then made sense to normalize the variables so they were comparable. Results in a dense population like New York aren’t comparable to Montana unless we scale for these factors. Having created new normalized variables I then began a principle components analysis to find which variables explain the most variance in the data. This is done by creating an array with the scaled data and then fitting it using the sklearn.decomposition.PCA module. After my analysis I can tell that more than 70 percent of the variance in the data is caused by the first two components. After graphing the states based on the principle components and average ticket prices, the patterns show some clustering but don’t justify excluding certain states from the analysis. The state data is then merged with the resort level data and variables are added that measure the resorts share of business within the state. A heatmap of the features show that theirs a high correlation between vertical drop, fast Quads, total chairs, runs, and snowmaking. Scatterplots of these features reveal that there does generally seem to be a linear trend. Lastly, a comparison of the chair to runs ratio shows that a low amount of chairs seem to increase prices. This could indicate higher prices in cases where chairs are higher in demand. "
    ]
   },
   {
